--- a/ATA_WPF/Dictionary1.xaml
+++ b/ATA_WPF/Dictionary1.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     
     
     
@@ -144,6 +145,7 @@
         <Setter Property="Margin" Value="5,0,0,0" />
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="16"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
     
     <!-- IS ACTIVE style -->
@@ -173,5 +175,28 @@
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Margin" Value="20,0,-4,0" />
     </Style>
+
+    
+    <!-- DATA GRID style -->
+    <Style TargetType="DataGrid" x:Key="styleDataGrid">
+        <Setter Property="Background" Value="#FFA3CEED"/>
+    </Style>
+
+    
+    <!-- DATA GRID COLUMN HEADER style -->
+    <Style TargetType="DataGridColumnHeader" x:Key="styleDataGridColumnHeader">
+        <Setter Property="Background" Value="Aqua"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Height" Value="25"/>
+    </Style>
+    
+    
+    <!-- INFO TEXTBLOCK style -->
+    <Style TargetType="TextBlock" x:Key="styleInfoTextBlock">
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="FontSize" Value="14"/>
+    </Style>
+
+
 
 </ResourceDictionary>
