--- a/ATA_WPF/App.xaml
+++ b/ATA_WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ATA_WPF"
-             StartupUri="MainWindow.xaml">
+             StartupUri="TryStartupWindow.xaml">
     <Application.Resources>
        
         
