--- a/ATA_WPF/Views/ListProcsForm.xaml
+++ b/ATA_WPF/Views/ListProcsForm.xaml
@@ -3,12 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ATA_WPF"
+        xmlns:local="clr-namespace:ATA_WPF" xmlns:local1="clr-namespace:ATA_WPF.ViewModels"
         mc:Ignorable="d"
         Title="" Height="450" Width="290"
         SizeToContent="WidthAndHeight"
         ResizeMode="NoResize"
-        Background="#FFDCDCFD">
+        Background="#FFDCDCFD"
+        x:Name="listWindow"
+        WindowStyle="SingleBorderWindow"> <!-- window title bar style -->
+    <Window.DataContext>
+        <local1:ListProcsFormViewModel/>
+    </Window.DataContext>
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -34,13 +39,18 @@
        
         
         <!-- ROW 2 THE LISTBOX -->
-        <ListBox x:Name="ProcsList" Grid.Row="2" Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="320" Background="#FFD7D7F3">
+        <ListBox x:Name="ProcsList" ItemsSource="{Binding ActiveProcsNames, UpdateSourceTrigger=PropertyChanged}"
+                 SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}"
+                 Grid.Row="2" Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="320" Background="#FFD7D7F3">
         </ListBox>
 
 
         <!-- ROW 3 THE BUTTON -->
-        <Button x:Name="setButton" Content="Set" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right" Margin="0,5,0,5" Width="40" Click="SetButton_Click" Background="#FF71A1E2" FontSize="14" FontWeight="Bold" />
-    
+        <!--<Button x:Name="setButton" Content="Set" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right" Margin="0,5,0,5" Width="40" Click="SetButton_Click" Background="#FF71A1E2" FontSize="14" FontWeight="Bold" />
+        -->
+
+        <Button x:Name="setButton" Command="{Binding Path=SetApplicationToTrackCMD}" CommandParameter="{Binding ElementName=listWindow, Mode=OneWay}" Content="Set" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right" Margin="0,5,0,5" Width="40" Background="#FF71A1E2" FontSize="14" FontWeight="Bold" />
+
         <!-- ROW 4 TO DELETE LATER 
         <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Text="HELLO ME IS 4 ROW 0 COLUMN"/>
         -->
