--- a/ATA_WPF/MainWindow.xaml
+++ b/ATA_WPF/MainWindow.xaml
@@ -7,18 +7,12 @@
         mc:Ignorable="d"
         Title="ATA 0.1.4" Height="300" Width="985"
         ResizeMode="CanMinimize"
-<<<<<<< Updated upstream:ATA_WPF/MainWindow.xaml
-        Icon="/icon2.png"
-=======
-        Icon="../img/iconpng.png"
->>>>>>> Stashed changes:ATA_WPF/Views/MainWindow.xaml
-        SizeToContent="Manual"  FontFamily="Consolas">
+        Icon="../img/iconpng.png">
+
 
     <Window.Resources>
         <ResourceDictionary Source="Dictionary1.xaml"/>
     </Window.Resources>
-
-
 
 
 
